--- a/style.css
+++ b/style.css
@@ -22,10 +22,22 @@ h1 {
 
 .description {
    text-align: left;
-   margin: 10px 15px 35px;
-				border: solid 3px  purple; 
+   margin: 15px;
+				border: solid 4px  purple;
 				padding: 12px;
 				background-color: #2b0132;
+}
+
+summary {list-style: none}
+summary::-webkit-details-marker {display: none; }
+
+.proinfo {
+				text-align: left;
+				margin: 40px 15px ;
+				border: solid 2px green;
+				border-radius: 5px;
+				padding: 12px;
+				background-color: #003300;
 }
  
 .contacts {
@@ -36,7 +48,7 @@ h1 {
 
 .credit { 
 				margin-top: 30px;
-   font-size: 15px;
+   font-size: 20px;
 				font-weight: normal;
 				color: greenyellow;
 				font-family: "Brush Script MT", cursive;
